remove tentative bootloader that load image from files.